# Computacion_Grafica

./: README.md
workshop/Src/: CMakeLists.txt  Main.cpp  RgbImage.cpp  RgbImage.h  simpleobjloader.cxx  simpleobjloader.h  tgaimg.cxx  tgaimg.h
